# elephant-seals

./: LICENSE  README.md
ceres/cerise/: CMakeLists.txt
ceres/cerise/src/: displacement_errors.h  optimise_rotations.cpp  rotation_errors.cpp  rotation_errors.h  states.cpp  states.h
cerise/: CMakeLists.txt
cerise/cgnuplot/: CMakeLists.txt  mainpage.dox  manifest.xml
cerise/cgnuplot/include/cgnuplot/: CGnuplot.h  CGnuplotSurfaceGrapher.h  CShell.h
cerise/cgnuplot/src/: CGnuplot.cpp  CGnuplotSurfaceGrapher.cpp  CShell.cpp  test.cpp  test_movie.cpp  test_surf.cpp
cerise/src/: optimise_displacement.cpp  optimise_rotations.cpp  optimise_rotations_raw.cpp  rotation_errors.h  states.cpp  states.h
es_optimizer/: CMakeLists.txt  mainpage.dox  manifest.xml
es_optimizer/include/es_optimizer/: ErrorTerm.h  OptimisationProblem.h  mat_ops.h
es_optimizer/src/: optimise_rotation.cpp
es_sim/: Ap  Bp  CMakeLists.txt  es_sim.txt  mainpage.dox  manifest.xml
es_sim/src/: es_sim.cpp  optimise_mag.cpp  optimise_rotations.cpp  rotation_errors.cpp  rotation_errors.h
matlab/: load_gps_trajet.m  prepare.m  prepare_dorian.m  prepare_dorian2.m  prepare_plots.m  raw.m
matlab/GPS_CoordinateXforms/: wgs2utm.m
matlab/optimisation/: cost.m  gauss_newton.m  jac.m  lm_basic.m  obs.m  potential.m  potential_angle.m  test.m  test_error.m  test_error_2.m  test_error_3.m  test_rot.m  test_rot_angle.m
matlab/optimise_rotation/: cont_attitude_cal.m  cont_propulsion_cal.m  meas_accel_cal.m  meas_mag_cal.m  optimise3.m
matlab/optimise_trajectory/: cont_attitude.m  cont_vel.m  cont_vel_norot.m  kinematic.m  kinematic_norot.m  meas_accel.m  meas_accel3.m  meas_depth.m  meas_depth_norot.m  meas_gps.m  meas_gps_norot.m  meas_mag.m  meas_mag3.m  meas_vel.m  meas_vel_norot.m  optimise.m  optimise2.m  optimise4.m  prepare.m  procall.m
matlab/rotations/: Slog_inv.m  Srot_inv.m  cross_mat.m  exp_mat.m  log_mat.m  rotx.m  roty.m  rotz.m  rpy.m
matlab/sandbox/: export_DDT16Hz.m  testmag.m  testorientation.mat
matlab/simulation/: simulate.m
python/: data_to_db.py  extract_dives.py  optimise_rotations.py  weight_model.py
segmentation/: CMakeLists.txt  Makefile  fit.m  segment_all.sh  segment_new.sh
segmentation/matlab/: aggregate.m  fit.m  fit_dive.m  prepare_ctdacc.m  prepare_matdata.m  prepare_ncdata.m  prepare_txtacc.m
segmentation/report/: report.tex
segmentation/src/: segment_labels.cpp  statemachine.cpp
